[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = 'topobank-contact'
description = 'Boundary-element method for "topobank"'
requires-python = ">=3.10.0"
readme = 'README.rst'
license = { file = 'LICENSE' }
authors = [
    { name = "Michael Röttger", email = "info@michael-roettger.de" },
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" }
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 4.2',
    'Framework :: Celery',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content'
]
dependencies = [
    #'topobank',
    'ContactMechanics>=1.6.0'
]

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-django>=4.4.0',
    'pytest-mock',
    'factory-boy',
    'django-celery-results',
]

[project.urls]
homepage = 'https://contact.engineering'
repository = 'https://github.com/ContactEngineering/topobank-contact'



[tool.hatch.version]
source = "vcs"
