[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[metadata]
name = topobank-contact
version = 0.92.1
description =
    This is a plugin for "topobank" for contact analysis of measurements.
long_description = file: README.rst
url = https://contact.engineering
author = contact.engineering
author_email = support@contact.engineering
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Celery
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    ContactMechanics>=1.1.0

[options.extras_require]
dev =

[options.entry_points]
topobank.plugins =
    topobank_contact = topobank_contact:TopobankPluginMeta

