[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[metadata]
name = topobank-contact
url = https://contact.engineering

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    ContactMechanics>=1.1.0

[options.extras_require]
dev =

[options.entry_points]
topobank.plugins =
    topobank_contact = topobank_contact:TopobankPluginMeta

