[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[metadata]
name = topobank-contact

[options]
include_package_data = true
packages = find:
install_requires =
    ContactMechanics>=1.2.0

[options.extras_require]
dev =

[options.entry_points]
topobank.plugins =
    topobank_contact = topobank_contact.apps.ContactPluginConfig

